# yamake

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cli.yaml  jsonmake  jsonmake-witcher3.py  jsonmake.json  jsonmake.py  jsonmake_config.json  setup.py  tinymake-witcher3.py  tinymake.py  tinymake_config.json  yamake-witcher3.py  yamake.py  yamake.yaml  yamake_builder.py  yamake_config.yaml
examples/: complex.py  simple.py
src/: main.rs
test/confuse-a-cat/: yamake.yaml
test/witcher3/: yamake-config-windows.yaml  yamake-config.yaml  yamake-witcher3-plugin.py  yamake-witcher3.py  yamake.yaml  yamake_config_windows.yaml
yamake/: __init__.py  cli.py  core.py  test_cli.py  test_plugins.py  yamake-example-simple.py  yamake-tests.py
