[package]
name = "yamake"
version = "0.1.0"
authors = ["drollings <daniel.rollings@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Optional size-reducing tweaks recommended at https://github.com/johnthagen/min-sized-rust

[dependencies]
yaml-rust = "0.4"
clap = {version = "2.33", features = ["yaml"]}
# git2 = "0.13"

# std = {default-features=false}


# [profile.release]
# lto = true
# panic = 'abort'

